--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "seed": "node ./scripts/seedDb.js",
+    "fresh": "node ./scripts/seedDb.js && nodemon ./src/server.js"
   },
   "devDependencies": {
     "concurrently": "4.1.0",
+    "eslint": "^8.31.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.4",
     "nodemon": "1.19.1"
   },
   "engines": {
